--- a/mingw-w64-libpng/PKGBUILD
+++ b/mingw-w64-libpng/PKGBUILD
@@ -27,6 +27,8 @@ prepare() {
   patch -p1 -i "${srcdir}/${_realname}-${pkgver}-apng.patch"
 }
 
+# Disable optimization broken in gcc 8.1.0 (fixed in gcc 8.2.0)
+export CFLAGS="$CFLAGS -fno-reorder-blocks-and-partition"
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir -p "${srcdir}/build-${MINGW_CHOST}"
