--- a/mingw-w64-python3/PKGBUILD
+++ b/mingw-w64-python3/PKGBUILD
@@ -18,7 +18,7 @@ pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _pybasever=3.6
 pkgver=${_pybasever}.5
-pkgrel=1
+pkgrel=9002
 pkgdesc="A high-level scripting language (mingw-w64)"
 arch=('any')
 license=('PSF')
@@ -319,7 +319,7 @@ prepare() {
   # rather than copies shipped in the tarball
   rm -r Modules/expat
   rm -r Modules/zlib
-  rm -r Modules/_ctypes/{darwin,libffi}*
+  # rm -r Modules/_ctypes/{darwin,libffi}*
 }
 
 check() {
@@ -362,20 +362,19 @@ build() {
   [ -d "${srcdir}/build-${CARCH}" ] && rm -rf "${srcdir}/build-${CARCH}"
   mkdir -p "${srcdir}/build-${CARCH}" && cd "${srcdir}/build-${CARCH}"
 
-  export LIBS="-lgdi32 "
   MSYSTEM=MINGW ../Python-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --host=${MINGW_CHOST} \
     --build=${MINGW_CHOST} \
     --enable-shared \
-    --without-threads \
+    --with-threads \
     --with-system-expat \
     --with-system-ffi \
     --without-ensurepip \
     "${_extra_config[@]}" \
     OPT=""
 
-  make -j1
+  make
 }
 
 package() {
@@ -537,4 +536,3 @@ sha256sums=('f434053ba1b5c8a5cc597e966ead3c5143012af827fd3f0697d21450bb8d87a6'
             '35f4dfc8362356a2f51bae3fc0ae5802a278302ea89a36828769d48b12ed195b'
             '0c345b144f36b92b216d6d277875326faf2e4187ac62101d3bd9aba9ed053998'
             'f4f5359b35741b703cbd22dc73438c181b8541e30b3f7614bd272f7cd2c59049')
-
