disable bootstrapping repositories

--- a/pacman.conf
+++ b/pacman.conf
@@ -77,13 +77,13 @@ SigLevel = Optional
 Server = https://dl.bintray.com/rtools/mingw64
 SigLevel = Optional
 
-[oldmingw32]
-Server = https://dl.bintray.com/r-windows/rtools
-SigLevel = Optional
+#[oldmingw32]
+#Server = https://dl.bintray.com/r-windows/rtools
+#SigLevel = Optional
 
-[oldmingw64]
-Server = https://dl.bintray.com/r-windows/rtools
-SigLevel = Optional
+#[oldmingw64]
+#Server = https://dl.bintray.com/r-windows/rtools
+#SigLevel = Optional
 
 [msys]
 Server = http://repo.msys2.org/msys/$arch/
