--- a/mingw-w64-v8-315/PKGBUILD
+++ b/mingw-w64-v8-315/PKGBUILD
@@ -14,14 +14,27 @@ depends=("${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-icu")
 options=('!emptydirs' '!strip')
 conflicts=("${MINGW_PACKAGE_PREFIX}-v8")
-source=("https://github.com/v8/v8/archive/${pkgver}.tar.gz")
-md5sums=('1406770373cc26e5af26e5e04c2756f2')
+source=("https://github.com/v8/v8/archive/${pkgver}.tar.gz"
+		v8-3.14.5.8-CVE-2013-2634.patch
+		v8-3.14.5.10-gcc7.patch
+		v8-3.14.5.10-gcc8.patch
+		jeroen.patch)
+md5sums=('1406770373cc26e5af26e5e04c2756f2'
+		'SKIP'
+		'SKIP'
+		'SKIP'
+		'SKIP')
 
 prepare() {
   cd ${_realname}-${pkgver}
   sed -i s/winmm.lib/winmm/g tools/gyp/v8.gyp
   sed -i s/ws2_32.lib/ws2_32/g tools/gyp/v8.gyp
   sed -i '/#include "cctest.h"/a #include "win32-headers.h"' test/cctest/test-platform-win32.cc
+  
+  patch -Nbp1 -i "${srcdir}/v8-3.14.5.8-CVE-2013-2634.patch"
+  patch -Nbp1 -i "${srcdir}/v8-3.14.5.10-gcc7.patch"
+  patch -Nbp1 -i "${srcdir}/v8-3.14.5.10-gcc8.patch"
+  patch -Nbp1 -i "${srcdir}/jeroen.patch"
 }
 
 build() {
@@ -44,7 +57,6 @@ build() {
     $PYTHON build/gyp_v8 \
       -Dv8_enable_i18n_support=true \
       -Duse_system_icu=1 \
-      -Dconsole=readline \
       -Dv8_target_arch=${_arch} \
       --generator-output=${BUILDDIR} \
       -f make
