--- a/mingw-w64-poppler/PKGBUILD
+++ b/mingw-w64-poppler/PKGBUILD
@@ -50,6 +50,8 @@ build() {
     -G"MSYS Makefiles" \
     -DBUILD_TESTING=OFF \
     -DBUILD_SHARED_LIBS=OFF \
+    -DLIBOPENJPEG_LIBRARIES=-lopenjp2 \
+    -DLIBOPENJPEG_INCLUDE_DIR="${MINGW_PREFIX}/include/openjpeg-2.3" \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DENABLE_XPDF_HEADERS=ON \
     -DENABLE_GTK_DOC=OFF \
