--- a/mingw-w64-hdf5/PKGBUILD
+++ b/mingw-w64-hdf5/PKGBUILD
@@ -7,7 +7,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _ver=1.8.20
 patch=
 pkgver=${_ver}${patch//-/.}
-pkgrel=2
+pkgrel=9002
 pkgdesc="General purpose library and file format for storing scientific data (mingw-w64)"
 arch=('any')
 license=("custom")
@@ -68,6 +68,7 @@ build() {
     -DHDF5_ENABLE_DEPRECATED_SYMBOLS=ON \
     -DHDF5_ENABLE_SZIP_SUPPORT=ON \
     -DHDF5_ENABLE_Z_LIB_SUPPORT=ON \
+    -DSZIP_DIR=${MINGW_PREFIX} \
     ../${_realname}-${_ver}${patch}
 
   make
