--- a/mingw-w64-tk/PKGBUILD
+++ b/mingw-w64-tk/PKGBUILD
@@ -5,7 +5,7 @@ _realname=tk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=8.6.8
-pkgrel=2
+pkgrel=3
 pkgdesc="A windowing toolkit for use with tcl (mingw-w64)"
 arch=('any')
 url="https://tcl.sourceforge.io/"
@@ -32,7 +32,7 @@ prepare() {
   patch -p1 -i "${srcdir}"/003-fix-forbidden-colon-in-paths.mingw.patch
   patch -p1 -i "${srcdir}"/004-install-man.mingw.patch
   patch -p1 -i "${srcdir}"/006-prevent-tclStubsPtr-segfault.patch
-  #patch -p1 -i "${srcdir}"/008-dont-link-shared-with--static-libgcc.patch
+  patch -p1 -i "${srcdir}"/008-dont-link-shared-with--static-libgcc.patch
 
   cd win && autoreconf -fi
 }
@@ -54,7 +54,6 @@ build() {
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
     --with-tcl=${MINGW_PREFIX}/lib \
-    --disable-shared \
     ${extra_config} \
     ${enable64bit}
 
@@ -62,7 +61,7 @@ build() {
 }
 
 package() {
-  local debug_suffix="s"
+  local debug_suffix=
   if check_option "debug" "y"; then
     debug_suffix="g"
   fi
@@ -72,7 +71,7 @@ package() {
   find "${pkgdir}${MINGW_PREFIX}" -name '*.def' -o -name '*.exp' | xargs -rtl1 rm
   find "${pkgdir}${MINGW_PREFIX}" -name '*.sh' -o -name '*.dll' -o -name '*.exe' | xargs -rtl1 chmod 755
 
-  ln -s "${pkgdir}${MINGW_PREFIX}/lib/libtk86.a" "${pkgdir}${MINGW_PREFIX}/lib/libtk.a"
+  ln -s "${pkgdir}${MINGW_PREFIX}/lib/libtk86${debug_suffix}.dll.a" "${pkgdir}${MINGW_PREFIX}/lib/libtk.dll.a"
   mkdir -p "${pkgdir}${MINGW_PREFIX}/include/tk${pkgver%.*}/tk-private/"{generic/ttk,win}
 
   cd ${srcdir}/tk${pkgver}
