Fix missing symbol in crt

--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-svn")
 pkgdesc='MinGW-w64 CRT for Windows'
 pkgver=5.0.4
-pkgrel=9002
+pkgrel=9003
 arch=('any')
 url='https://mingw-w64.sourceforge.io/'
 license=('custom')
@@ -21,11 +21,13 @@ options=('!strip' 'staticlibs' '!buildflags' '!emptydirs')
 source=("https://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2"
         0001-Allow-to-use-bessel-and-complex-functions-without-un.patch
         0002-DirectX-9-fixes-for-VLC.patch
-        0003-DirectX-11-fixes-for-VLC.patch)
+        0003-DirectX-11-fixes-for-VLC.patch
+        mkgmtime.diff)
 sha256sums=('5527e1f6496841e2bb72f97a184fc79affdcd37972eaa9ebf7a5fd05c31ff803'
             'd641257f7e1469aff89adc33e57702b75fe9667ca035978f890eae1020b6814c'
             '7ec97c9c02827aedc8c922784cb998e1175769bf0c8f7bd18a79d64002620330'
-            'e80b76aa3eef6d0206c4d99ac340a60cfd92ea80392a6ec5122dc3851fbd3286')
+            'e80b76aa3eef6d0206c4d99ac340a60cfd92ea80392a6ec5122dc3851fbd3286'
+            'SKIP')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -41,6 +43,9 @@ prepare() {
   apply_patch_with_msg 0001-Allow-to-use-bessel-and-complex-functions-without-un.patch
   apply_patch_with_msg 0002-DirectX-9-fixes-for-VLC.patch
   #apply_patch_with_msg 0003-DirectX-11-fixes-for-VLC.patch
+
+  # Jeroen: add missing symbols
+  apply_patch_with_msg mkgmtime.diff
 }
 
 build() {
