add missing pkg-config files

--- a/mingw-w64-openjpeg2/PKGBUILD
+++ b/mingw-w64-openjpeg2/PKGBUILD
@@ -62,6 +62,7 @@ build() {
     -DBUILD_JPIP=OFF \
     -DBUILD_JP3D=ON \
     -DBUILD_JAVA=OFF \
+    -DBUILD_PKGCONFIG_FILES=ON \
     ../${_realname}-${pkgver}
   make -j1
 }
