--- a/mingw-w64-hdf5/PKGBUILD
+++ b/mingw-w64-hdf5/PKGBUILD
@@ -29,13 +29,14 @@ sha256sums=('a4f2db7e0a078aa324f64e0216a80731731f73025367fa94d158c9b1d3fbdf6f'
             'a21a6be1fa7e606ed16d903ea8ba670a1e387cdb9aac69e2c6468a5a9fc5c990'
             'c384db7d39123578ea7b9ead449c347ed0833bc77163c4165340a71b34baaaa0'
             '7370973e66370bb39bf2466be3ef58f464a10478b996e8c040c5a994d143d111')
-depends=("${MINGW_PACKAGE_PREFIX}-szip"
-         "${MINGW_PACKAGE_PREFIX}-zlib")
+depends=("${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-gcc-fortran"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "patch")
 options=('staticlibs' 'strip')
+
+groups=("rtools-${_realname}")
 
 prepare() {
   cd "${srcdir}/${_realname}-${_ver}${patch}"
@@ -49,7 +50,6 @@ prepare() {
 }
 
 build() {
-  # Build shared library
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
@@ -66,7 +66,7 @@ build() {
     -DHDF5_BUILD_FORTRAN=ON \
     -DHDF5_BUILD_TOOLS=ON \
     -DHDF5_ENABLE_DEPRECATED_SYMBOLS=ON \
-    -DHDF5_ENABLE_SZIP_SUPPORT=ON \
+    -DHDF5_ENABLE_SZIP_SUPPORT=OFF \
     -DHDF5_ENABLE_Z_LIB_SUPPORT=ON \
     -DSZIP_DIR=${MINGW_PREFIX} \
     ../${_realname}-${_ver}${patch}
@@ -76,7 +76,6 @@ build() {
 
 package() {
   mkdir ${srcdir}/build-${MINGW_CHOST}/bin/static/Release/
-  mkdir ${srcdir}/build-${MINGW_CHOST}/bin/shared/Release/
   cp ${srcdir}/build-${MINGW_CHOST}/bin/static/*.mod ${srcdir}/build-${MINGW_CHOST}/bin/static/Release
   cd "${srcdir}/build-${MINGW_CHOST}"
   make DESTDIR=${pkgdir} install
