--- a/mingw-w64-zlib/PKGBUILD
+++ b/mingw-w64-zlib/PKGBUILD
@@ -8,13 +8,14 @@ _realname=zlib
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.2.11
-pkgrel=9002
+pkgrel=9100
 pkgdesc="Compression library implementing the deflate compression method found in gzip and PKZIP (mingw-w64)"
 arch=('any')
 license=(ZLIB)
 url="https://www.zlib.net/"
 depends=("${MINGW_PACKAGE_PREFIX}-bzip2")
 makedepends=('git')
+groups=("rtools-${_realname}")
 options=('staticlibs')
 source=("https://zlib.net/current/${_realname}-${pkgver}.tar.gz"
         "git+https://github.com/nmoinvaz/minizip.git#commit=7914ff3c"
