--- a/mingw-w64-libpng/PKGBUILD
+++ b/mingw-w64-libpng/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=libpng
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.6.34
-pkgrel=9002
+pkgver=1.6.35
+pkgrel=9100
 arch=('any')
 pkgdesc="A collection of routines used to create PNG format graphics (mingw-w64)"
 depends=("${MINGW_PACKAGE_PREFIX}-zlib")
@@ -13,11 +13,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 license=('custom')
 url="http://www.libpng.org/pub/png/libpng.html"
 options=('strip' '!libtool' 'staticlibs')
-source=("https://downloads.sourceforge.net/sourceforge/libpng/${_realname}-${pkgver}.tar.xz"{,.asc}
+source=("https://downloads.sourceforge.net/sourceforge/libpng/${_realname}-${pkgver}.tar.xz"
         "https://downloads.sourceforge.net/project/libpng-apng/libpng16/${pkgver}/${_realname}-${pkgver}-apng.patch.gz")
-sha256sums=('2f1e960d92ce3b3abd03d06dfec9637dfbd22febf107a536b44f7a47c60659f6'
-            'SKIP'
-            'e661944e54574a3f26927ac9eb7e2788f3a2675545a19735b83fbb9adcb544c1')
+sha256sums=('23912ec8c9584917ed9b09c5023465d71709dce089be503c7867fec68a93bcd7'
+            '18ceb239857bbd32ca706cdad29f1a5dcfb87a5c54258db3bb077cff78c12e04')
 validpgpkeys=('8048643BA2C840F4F92A195FF54984BFA16C640F')  # Glenn Randers-Pehrson (mozilla) <glennrp+bmo@gmail.com>
 
 prepare() {
@@ -28,7 +27,7 @@ prepare() {
 }
 
 # Disable optimization broken in gcc 8.1.0 (fixed in gcc 8.2.0)
-export CFLAGS="$CFLAGS -fno-reorder-blocks-and-partition"
+# export CFLAGS="$CFLAGS -fno-reorder-blocks-and-partition"
 build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir -p "${srcdir}/build-${MINGW_CHOST}"
