--- a/mingw-w64-python3/PKGBUILD
+++ b/mingw-w64-python3/PKGBUILD
@@ -3,16 +3,6 @@
 # Contributor: Saul Ibarra Corretge <saghul@gmail.com>
 # Contributor: Frode Solheim <frode@fs-uae.net>
 
-# TODO :: subprocess.Popen .. specifically list2cmdline in subprocess.py
-#         needs a fix so it can handle running MSYS2 executables better.
-#         Arguments should not be quoted in the Windows fashion as-per:
-#         http://www.daviddeley.com/autohotkey/parameters/parameters.htm
-#         but instead how Cygwin expects them to be quoted. Checking for
-#         {cygwin,msys-2.0}.dll in the executable is the only way that I
-#         can think to do this at present.
-#         Any double quoted string will cause problems, e.g.
-#         -DGNOMELOCALEDIR=\"/mingw64/share/locale\"
-
 _realname=python3
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
@@ -36,6 +26,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-expat"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
         )
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
+groups=("rtools-python"
+        "rtools-python3")
 options=('makeflags') # 'debug' '!strip' )
 source=("https://www.python.org/ftp/python/${pkgver%rc?}/Python-${pkgver}.tar.xz"
         0000-make-_sysconfigdata.py-relocatable.patch
@@ -475,7 +467,7 @@ sha256sums=('0382996d1ee6aafe59763426cf0139ffebe36984474d0ec4126dd1c40a8b3549'
             'a14d40567e6bf6d08fab55e95a56495eb6fcdfc9d06d80b959b487df26481190'
             'a8b2096f3b4a26d32a325e778ed47cd921d40a1ef481a0387a5ff3592d5d9c77'
             '67c132e02d8bd67d9b55c7a3f17329f52ee84a588314522c5f8763bd3e175700'
-            '0aa66f597647d4e497604ec0e6a020e3ebc19f36b75a1da6a868f604198697c9'
+            '4802eceab9a147fc1cddaadf84917839edfca0b3dcd33d3be92e4c2edde3c726'
             'f0d20525f42387153cf82e2d4a3139a7b7a39a7408833c8b02e9c072a9967674'
             '8bd4dddfda38e8dae700eca868693cba3b2fb766088b46a52a4ac475e9e6b25e'
             'a88ed0a61dcb0a860286ab1d6bf489b272a670625687924943713a58c6068a94'
