--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -9,7 +9,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-fortran")
 pkgver=8.2.0
-pkgrel=9100
+pkgrel=9101
 pkgdesc="GCC for the MinGW-w64"
 arch=('any')
 url="https://gcc.gnu.org"
@@ -46,7 +46,8 @@ source=("https://ftp.gnu.org/gnu/gcc/${_realname}-${pkgver}/${_realname}-${pkgve
         "0016-gcc-7-branch-disable-weak-refs-in-libstdc++.patch"
         "0017-gcc-7-branch-Enable-std-experimental-filesystem.patch"
         "0018-gcc-7-branch-Enable-a-native-GCC-to-color-diagnostic-messages-sen.patch"
-        "0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch")
+        "0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch"
+        "0140-gcc-8.2.0-diagnostic-color.patch")
 sha256sums=('196c3c04ba2613f893283977e6011b2345d1cd1af9abeac58e916b1aab3e0080'
             'SKIP'
             'dea2bbad4967280910559c6a11b865aeec19cab34647fb5894cb498b24b14462'
@@ -63,7 +64,8 @@ sha256sums=('196c3c04ba2613f893283977e6011b2345d1cd1af9abeac58e916b1aab3e0080'
             'c1e271c166de0062092cb61d50977c0e61d75b0ae6fb086cb8bb4da2b3fd18d7'
             'b1c3c20bf501cebbcb02b4a50f117a4f90eb4fb79eac7aa99c85e2c54c106790'
             '33392651e17b81609718873ff32606deee5f3fc5176c197bb96eedc3dada8912'
-            '1a2309d027c3defd0257f50a3c82fa8d2b5ea825c9d880ed77ea8e43505112b2')
+            '1a2309d027c3defd0257f50a3c82fa8d2b5ea825c9d880ed77ea8e43505112b2'
+            'e467f0ac68b349de826c79b00a45c5ad9e7c5a55d06b9b9fa7afd94c597f6376')
 
 _threads="posix"
 
@@ -106,7 +108,8 @@ prepare() {
     0010-Fix-using-large-PCH.patch \
     0011-Enable-shared-gnat-implib.patch \
     0014-clone_function_name_1-Retain-any-stdcall-suffix.patch \
-    0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch
+    0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch \
+    0140-gcc-8.2.0-diagnostic-color.patch
   
   # These are for GCC 7 branch only:
   # 0016-gcc-7-branch-disable-weak-refs-in-libstdc++.patch \
