--- a/mingw-w64-nasm/PKGBUILD
+++ b/mingw-w64-nasm/PKGBUILD
@@ -12,11 +12,14 @@ license=('BSD')
 url="http://www.nasm.us"
 options=('strip' '!libtool' 'staticlibs' '!makeflags')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
-source=(http://www.nasm.us/pub/nasm/releasebuilds/${pkgver}/${_realname}-${pkgver}.tar.xz)
-sha256sums=('812ecfb0dcbc5bd409aaa8f61c7de94c5b8752a7b00c632883d15b2ed6452573')
+source=(http://www.nasm.us/pub/nasm/releasebuilds/${pkgver}/${_realname}-${pkgver}.tar.xz
+		0001-Remove-invalid-pure_func-qualifiers.patch)
+sha256sums=('812ecfb0dcbc5bd409aaa8f61c7de94c5b8752a7b00c632883d15b2ed6452573'
+			'SKIP')
 
 prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
+  patch -p1 -i ${srcdir}/0001-Remove-invalid-pure_func-qualifiers.patch
 }
 
 build() {
