--- a/mingw-w64-harfbuzz/PKGBUILD
+++ b/mingw-w64-harfbuzz/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=harfbuzz
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.8.0
-pkgrel=9002
+pkgver=2.2.0
+pkgrel=9100
 pkgdesc="OpenType text shaping engine (mingw-w64)"
 arch=('any')
 url="https://www.freedesktop.org/wiki/Software/HarfBuzz"
@@ -16,7 +16,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
 depends=("${MINGW_PACKAGE_PREFIX}-freetype")
 options=('strip' 'staticlibs')
 source=("https://www.freedesktop.org/software/harfbuzz/release/${_realname}-${pkgver}.tar.bz2")
-sha256sums=('a18518a31436f4b8124a9887ec2c0cf2e3a01f1adedd50dd45b0cc14125e96a3')
+sha256sums=('b7ccfcbd56b970a709e8b9ea9fb46c922c606c2feef8f086fb6a8492e530f810')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -27,6 +27,7 @@ build() {
   [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
   mkdir -p "${srcdir}/build-${MINGW_CHOST}"
   cd "${srcdir}/build-${MINGW_CHOST}"
+  LIBS="-lgdi32" \
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
@@ -38,11 +39,6 @@ build() {
     --without-gobject
 
   make
-}
-
-check(){
-  cd "${srcdir}/build-${MINGW_CHOST}"
-  make check
 }
 
 package() {
