--- a/mingw-w64-boost/PKGBUILD
+++ b/mingw-w64-boost/PKGBUILD
@@ -16,6 +16,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-bzip2"
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-python3"
 			 lndir)
+groups=("rtools-${_realname}")
 options=('strip' 'buildflags' 'staticlibs')
 source=(https://downloads.sourceforge.net/sourceforge/boost/boost_${_boostver}.tar.bz2
         boost-1.48.0-add-bjam-man-page.patch
