--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -39,7 +39,7 @@ sha256sums=('b4dc951c3743a60e2e120a77892e9e864fb936b2e58e7c77e8581f4d050e8cd8'
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
-  patch -p1 -i "${srcdir}"/0004-gpgme-find-gnupg.patch
+  #patch -p1 -i "${srcdir}"/0004-gpgme-find-gnupg.patch
   patch -p1 -i "${srcdir}"/0005-invoke-scripts-via-sh.patch
   patch -p1 -i "${srcdir}"/0006-fix-building-docs.patch
   patch -p1 -i "${srcdir}"/0007-mkdefsinc-use-CPPFLAGS.patch
