--- a/mingw-w64-libgpg-error/PKGBUILD
+++ b/mingw-w64-libgpg-error/PKGBUILD
@@ -53,7 +53,8 @@ build() {
       --host=${MINGW_CHOST} \
       --target=${MINGW_CHOST} \
       --disable-shared \
-      --enable-static
+      --enable-static \
+      --disable-threads
 
   make -j1
 }
