--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.11.1
+pkgver=0.12.0
 pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
@@ -14,12 +14,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-gcc")
 options=("staticlibs" "strip" "!buildflags")
-source=("https://www.apache.org/dist/arrow/arrow-${pkgver}/apache-${_realname}-${pkgver}.tar.gz"
-        "https://github.com/apache/arrow/commit/aaf70a41575f5eff590b4f73b8160ae896e6c24e.patch"
-        "https://github.com/apache/arrow/commit/eb500b657895ed5f762aa7b819fcea2cb898358d.patch")
-sha256sums=("c524f3d47f0cdb7445c0326b20e79f60485e12daeb2adc8ad6a845ad6c19c1ac"
-            "bebf9c852d36bd16c218c8965ec4899c9b82434a9cd143b19f439e060bb57e1d"
-            "a5e8a16ab51b728d00a74af57ae07e3d6fb6dd63ef71c805dc6fb3e07a369db0")
+source=(
+#       "https://www.apache.org/dist/arrow/arrow-${pkgver}/apache-${_realname}-${pkgver}.tar.gz"
+        "https://dist.apache.org/repos/dist/dev/arrow/apache-arrow-0.12.0-rc2/apache-arrow-0.12.0.tar.gz")
+sha256sums=("56a60e54a7baf660d4accebe4f2c35b623278e010e475b2b5ca9a78161b57214")
 
 cmake_build_type=release
 meson_build_type=debugoptimized
@@ -30,8 +28,8 @@ c_glib_build_dir=build-${CARCH}-c-glib
 
 prepare() {
   pushd ${source_dir}
-  patch -p1 -i ${srcdir}/aaf70a41575f5eff590b4f73b8160ae896e6c24e.patch
-  patch -p1 -i ${srcdir}/eb500b657895ed5f762aa7b819fcea2cb898358d.patch
+  #patch -p1 -i ${srcdir}/aaf70a41575f5eff590b4f73b8160ae896e6c24e.patch
+  #patch -p1 -i ${srcdir}/eb500b657895ed5f762aa7b819fcea2cb898358d.patch
   popd
 }
 
@@ -42,26 +40,27 @@ build() {
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake.exe \
-      ../${source_dir}/cpp \
-      -G "MSYS Makefiles" \
-      -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-      -DCMAKE_BUILD_TYPE=${cmake_build_type} \
-	  -DARROW_BUILD_STATIC=ON \
-      -DARROW_BUILD_TESTS=OFF \
-      -DARROW_PYTHON=OFF \
-      -DARROW_BOOST_USE_SHARED=OFF \
-      -DARROW_WITH_SNAPPY=OFF \
-	  -DARROW_WITH_ZSTD=OFF \
-	  -DARROW_WITH_LZ4=OFF \
-	  -DARROW_JEMALLOC=OFF \
-	  -DARROW_BUILD_SHARED=OFF\
-	  -DARROW_BOOST_VENDORED=OFF \
-	  -DARROW_WITH_ZLIB=OFF \
-	  -DARROW_WITH_BROTLI=OFF \
-	  -DARROW_USE_GLOG=OFF \
-	  -DPTHREAD_LIBRARY=OFF \
-	  -DARROW_BUILD_UTILITIES=ON \
-	  -DARROW_HDFS=OFF
+    ../${source_dir}/cpp \
+    -G "MSYS Makefiles" \
+    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
+    -DCMAKE_BUILD_TYPE=${cmake_build_type} \
+    -DARROW_BUILD_STATIC=ON \
+    -DARROW_BUILD_TESTS=OFF \
+    -DARROW_PYTHON=OFF \
+    -DARROW_BOOST_USE_SHARED=OFF \
+    -DARROW_WITH_SNAPPY=OFF \
+    -DARROW_WITH_ZSTD=OFF \
+    -DARROW_WITH_LZ4=OFF \
+    -DARROW_JEMALLOC=OFF \
+    -DARROW_BUILD_SHARED=OFF\
+    -DARROW_BOOST_VENDORED=OFF \
+    -DARROW_WITH_ZLIB=OFF \
+    -DARROW_WITH_BROTLI=OFF \
+    -DARROW_USE_GLOG=OFF \
+    -DPTHREAD_LIBRARY=OFF \
+    -DARROW_BUILD_UTILITIES=ON \
+    -DARROW_TEST_LINKAGE="static" \
+    -DARROW_HDFS=OFF
 
   make
   popd
