--- a/mingw-w64-poppler/PKGBUILD
+++ b/mingw-w64-poppler/PKGBUILD
@@ -1,7 +1,7 @@
 _realname=poppler
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.72.0
+pkgver=0.73.0
 pkgrel=1
 pkgdesc="PDF rendering library based on xpdf 3.0 (mingw-w64)"
 arch=('any')
@@ -20,23 +20,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-poppler-data"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('strip' 'staticlibs')
-source=("https://poppler.freedesktop.org/${_realname}-${pkgver}.tar.xz"
-        004-basename-include.patch
-        005-openjpeg2-include-dirs.patch
-        static-mingw.patch
-	backports.patch)
-sha256sums=('c1747eb8f26e9e753c4001ed951db2896edc1021b6d0f547a0bd2a27c30ada51'
-            'a0d1dfb3d5e698cc8d3348b108ede52d44165122e57754c6a696efe745e93030'
-            'c2e401f94739a15125c06041eef2e4f988355422aa35aaea2144f7dc7bdfa047'
-            'SKIP'
-            'SKIP')
+source=("https://poppler.freedesktop.org/${_realname}-${pkgver}.tar.xz")
+sha256sums=('e44b5543903128884ba4538c2a97d3bcc8889e97ffacc4636112101f0238db03')
 
 prepare() {
   cd ${_realname}-${pkgver}
-  patch -p1 -i ${srcdir}/004-basename-include.patch
-  patch -p1 -i ${srcdir}/005-openjpeg2-include-dirs.patch
-  patch -p1 -i ${srcdir}/static-mingw.patch
-  patch -p1 -i ${srcdir}/backports.patch
 }
 
 build() {
@@ -54,7 +42,7 @@ build() {
     -DBUILD_SHARED_LIBS=OFF \
     -DCMAKE_CXX_STANDARD_LIBRARIES="$(pkg-config --libs-only-l --static cairo libtiff-4) -lfreetype -lWinspool -lMsimg32 -lComdlg32" \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
-    -DENABLE_XPDF_HEADERS=ON \
+    -DENABLE_UNSTABLE_API_ABI_HEADERS=ON \
     -DENABLE_GTK_DOC=OFF \
     -DENABLE_GLIB=OFF \
     -DENABLE_QT5=OFF \
