--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,8 @@ environment:
       PACMAN_REPOSITORY: mingw64
       BINTRAY_PACKAGE: mingw64
 
-#matrix:
-#  fast_finish: true
+matrix:
+  fast_finish: true
 
 build_script:
   - C:\msys64\usr\bin\pacman --noconfirm --ask 20 --sync --refresh --refresh --sysupgrade --sysupgrade
