--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -31,7 +31,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-${_realname}"
 optdepends=()
 groups=("rtools-gcc")
 options=('staticlibs' '!emptydirs') # '!strip' 'debug')
-source=("ftp://gcc.gnu.org/pub/gcc/snapshots/${pkgver}/gcc-${pkgver}.tar.xz"
+source=("ftp://gcc.gnu.org/pub/gcc/snapshots/${pkgver}/${_realname}-${pkgver}.tar.xz"
         "gdbinit"
         0002-Relocate-libintl.patch
         0003-Windows-Follow-Posix-dir-exists-semantics-more-close.patch
@@ -87,7 +87,7 @@ del_file_exists() {
 
 
 prepare() {
-  cd ${srcdir}/${pkgver}
+  cd ${srcdir}/${_realname}-${pkgver}
   del_file_exists intl/canonicalize.c intl/canonicalize.h \
     intl/relocatex.c intl/relocatex.h \
     libstdc++-v3/src/filesystem/fs-posix.h \
